<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="io.github.haniyehkhaksar.weatherapp.ui.weather.WeatherViewModel" />

        <variable
            name="sharedViewModel"
            type="io.github.haniyehkhaksar.weatherapp.ui.SharedViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.weather.WeatherFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/todayTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today_title"
            android:layout_marginTop="@dimen/half_activity_padding"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/material_text_subhead"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.current.city}"
            android:layout_marginTop="@dimen/half_activity_padding"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/material_text_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todayTitle"
            tools:text="Calgary" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/weatherIcon"
            android:layout_width="@dimen/weather_icon_size"
            android:layout_height="@dimen/weather_icon_size"
            app:imageUrl="@{viewModel.current.icon}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todayTitle"
            tools:src="@mipmap/ic_launcher" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/temp_max_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/material_text_subhead"
            android:text="@{String.format(@string/max_min_temp, viewModel.current.maxTemp, viewModel.current.minTemp)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherIcon"
            tools:text="max 21 / min 2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_activity_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/material_text_subhead"
            android:text="@{String.format(@string/current_temp, viewModel.current.currentTemp)}"
            app:layout_constraintStart_toEndOf="@id/temp_max_min"
            app:layout_constraintTop_toBottomOf="@id/weatherIcon"
            tools:text="Current 18" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:layout_marginTop="@dimen/activity_padding"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/temp_max_min">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/half_activity_padding">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/futureTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next_three_days"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/material_text_subhead"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/futureWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:adapter="@{viewModel.weatherAdapter}"
                    android:layout_marginTop="@dimen/half_activity_padding"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/futureTitle"
                    app:spanCount="3"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_weather" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>