...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/half_activity_padding"
                    android:text="@{info.title}"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/material_text_subhead"
                    tools:text="@string/today_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:padding="@dimen/half_activity_padding"
                    android:text="@{String.format(@string/by_source, info.source)}"
                    android:textColor="@color/secondary_text"
...
