<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="io.github.haniyehkhaksar.weatherapp.ui.news.NewsViewModel" />

        <variable
            name="sharedViewModel"
            type="io.github.haniyehkhaksar.weatherapp.ui.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.news.NewsFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/newsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_highlights"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/material_text_headline"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            hasFixedSize="true"
            app:adapter="@{viewModel.newsAdapter}"
            app:layout_constraintTop_toBottomOf="@id/newsTitle"
            android:layout_marginTop="@dimen/half_activity_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_news" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>